[tool.poetry]
name = "twisort"
version = "0.1.0"
description = ""
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.1"
SQLAlchemy = "^1.4.42"
google-cloud-bigquery = "^3.3.5"
google-cloud = "^0.34.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
