[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
dotenv = "0.15.0"
percent-encoding = "2.2.0"
reqwest = "0.11.13"
serde = {version="1.0.150", features = ["derive"]}
serde_json = "1.0.89"
tokio = {version="1.23.0", features=["full"]}
url = "2.3.1"
lazy-init = "0.5.1"
r2d2 = "0.8.10"
chrono = "0.4.23"
async-trait = "0.1.60"
anyhow = "1.0.66"
http = "0.2.8"
hyper = "0.14.23"
uuid = {version="1.2.2", features=["serde","v4"]}
indexmap = { version = "1.9.2", features = ["serde-1"] }

[dependencies.diesel]
features=["sqlite", "r2d2", "chrono"]
version = "2.0.2"
